# decaysimulation

./: .gitignore  .gitignore.swp  README.md
MG5_aMC_v2_9_22/: py.py
MG5_aMC_v2_9_22/mg5env/: pyvenv.cfg
MG5_aMC_v2_9_22/models/Minimal_MCP/: py3_model.pkl
MG5_aMC_v2_9_22/models/sm/: py3_model.pkl
decay/: CMakeLists.txt  autoDecayPion.cc  decayPion  decayPion.cc  decayVectorMeson  decayVectorMeson.cc  lanl-decayPion  lanl-decayPion.cc  validateBRgee
decay/debug/: debug.sh
decay/output-data/: mcp-production.root
decay/pythonScripts/: decayMQ.py
decay/pythonScripts/myenv/: pyvenv.cfg
decay/sensitivity-plot/: draw.ipynb  efficiency-output2bodydecay-jsi.txt  efficiency_dy_dark.txt  efficiency_dy_dark_0.5m.txt  efficiency_dy_ship_1m.txt  efficiency_outputdecayEta.txt  efficiency_outputdecayPion.txt  mchi_values.txt  plot_efficiency.cpp  run_efficiency_tests.sh  total-0.5-m-radius  total_efficiency_output.txt  total_efficiency_output2bodydecay-jsi.txt  total_efficiency_output2bodydecay-jsi1m.txt  total_efficiency_output2bodydecay-omega.txt  total_efficiency_output2bodydecay-omega1m.txt  total_efficiency_output2bodydecay-phi.txt  total_efficiency_output2bodydecay-phi1m.txt  total_efficiency_output2bodydecay-phi1mSpin.txt  total_efficiency_output2bodydecay-rho.txt  total_efficiency_output2bodydecay-rho1m.txt  total_efficiency_outputdecayEta.txt  total_efficiency_outputdecayEta1m.txt  total_efficiency_outputdecayPion.txt  total_efficiency_outputdecayPion1m.txt
madgraph_mcp/: .makeSetMchiMass.py.swp  extractCross.py  getAgeo.cc
madgraph_mcp/Minimal_MCP/: py3_model.pkl
mesongen/: .nohup.out.swp  CMakeLists.txt  beam.config  mesonGen.cc  momentum.config  runMesonGen.sh
mesongen/lanl-Pion-Gen/: convertPion.C  generatePion  generatePion.cc
plotting/: DrawProbability.py  DrawProduction.py  IntegrateLimitplots.py  LSND.csv  mq_demonstrator_sort.csv  validatingBRgee.py
plotting/DrawProduction/: DrawProduction.py  DrawProductionSHIP.py  MCP-production.pgf
plotting/DrawProduction/DrawProbability/: CMS.csv  CMS.numbers  DrawProbability.py  DrawProbabilitySHIP.py  FERMINI.csv  FORMOSA.csv  IntegrateLimitplots.py  LANSCE-mQ_ER1.csv  LongQuest.csv  SUBMET.csv  YuD-Plots.py  colliders.csv  colliders.numbers  slac.csv  total_efficiency_outputdecayPion.txt
plotting/data/: ageo_ship_nCTEQ_iron.txt  dy_cross_ship_nCTEQ15_iron.txt  mship_values_copy.txt  run_efficiency_tests.sh  run_efficiency_tests_SHiP.sh  total_efficiency_output2body_decay-jsi-SHiP.txt  total_efficiency_output2body_decay-jsi.txt  total_efficiency_output2bodydecay-omega-SHIP.txt  total_efficiency_output2bodydecay-omega.txt  total_efficiency_output2bodydecay-phi-SHIP.txt  total_efficiency_output2bodydecay-phi.txt  total_efficiency_output2bodydecay-rho-SHIP.txt  total_efficiency_output2bodydecay-rho.txt  total_efficiency_outputdecayEtaDARK.txt  total_efficiency_outputdecayEta_SHIP-1m-small.txt  total_efficiency_outputdecayPion_SHIP-1m-small.txt
plotting/experiment-contours/: SENSEI.csv  SENSEI_MINOS.csv  argoneut_sort.csv  bebc.csv  charmii.csv
plotting/experiment-contours-small/: ArgoNeuT.csv  BEBC.csv  CHARMII.csv  LEP.csv  LEP_edited.csv  LSND.csv  MiniBooNE.csv  SENSEI_POLISHED.csv  SLACmQ.csv  milliQan.csv
plotting/plotting-scripts/: DrawProbability.py  lanl-DrawProbability.py  lanl-DrawProduction.py
plotting/sensitivity-plot/: ArgoNeutTwobyTwototal_efficiency_outputdecayPion.txt  DQ-total_efficiency_outputdecayEta1m.txt  DQ-total_efficiency_outputdecayPion1m.txt  DY-mcps-accepted-0.1m  Debug-DY-samples  TwoByTwototal_efficiency_output2bodydecay-jsi.txt  TwoByTwototal_efficiency_output2bodydecay-omega.txt  TwoByTwototal_efficiency_outputdecayEta.txt  TwoByTwototal_efficiency_outputdecayEtaDBG.txt  TwoByTwototal_efficiency_outputdecayPion.txt  ageo_darkquest.txt  ageo_darkquest_0.5m.txt  ageo_dy.txt  ageo_dy_dark-1m.txt  ageo_dy_dark_0.5m.txt  ageo_dy_ship_0.5m_final.txt  ageo_dy_ship_1m_final.txt  debgEta.sh  debugEtamasses.txt  debugging_total_efficiency_outputdecayEta1mSpin.txt  dy_cross.txt  dy_cross_091525.txt  dy_cross_dark.txt  dy_cross_ship.txt  dy_cross_ship_final.txt  fixPionEta.sh  mchi_values.txt  mship_values.txt  plot_efficiency.cpp  run_efficiency_tests.sh  total-1m-radius  total_efficiency_output2bodydecay-jsi-SHIP-1m.txt  total_efficiency_output2bodydecay-jsi-SHIP.txt  total_efficiency_output2bodydecay-jsi1m.txt  total_efficiency_output2bodydecay-jsi1mSpin.txt  total_efficiency_output2bodydecay-jsi574mSpin.txt  total_efficiency_output2bodydecay-jsiDARK.txt  total_efficiency_output2bodydecay-omega-SHIP-1m.txt  total_efficiency_output2bodydecay-omega-SHIP.txt  total_efficiency_output2bodydecay-omega.txt  (+28 more)
